compiler/tests/fail/arm-m4/intrinsic_sbfxS.jazz
export
fn sbfx(reg u32 arg0) -> reg u32 {
    reg u32 x;
    ?{}, x = #SBFXS(arg0, 0, 1);
    reg u32 res;
    res = x;
    return res;
}
